Fix Selection in  FrameInputHandlerImpl::Replace()

According to the description for Replace() in input_handler.mojom,
Replace() will replace the current selection, and if there is none, it
will select the word around the caret and replace that word.

However, in FrameInputHandlerImpl::Replace(), the word around the caret
is only selected if there is a selection (and not just a caret). This
is not in line with the description given above.

To fix this, the check that the WebLocalFrame has a selection is
negated. If the WebLocalFrame does not have a selection, the word
around the caret should be selected. Otherwise, the selection should
be left as is.

Bug: 869512
Change-Id: I288ab40fcfa10e0c04ad442e25f2404e0c700a14
Reviewed-on: https://chromium-review.googlesource.com/1157035
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Commit-Queue: Dave Tapuska <dtapuska@chromium.org>
Cr-Commit-Position: refs/heads/master@{#579546}
Former-commit-id: cb4583bb960e3d85c0453f07c574b233f8f244bf